--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY = SET_TOKEN_HERE
-URL_PROFILE_INSTAGRAM = https://instagram.com/theazran_
+API_KEY = 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
+URL_PROFILE_INSTAGRAM = https://instagram.com/username_ig.id
